.infras/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-remi-backend
  labels:
    app.kubernetes.io/name: demo-remi-backend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: demo-remi-backend
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: demo-remi-backend
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: demo-remi-backend
          image: registry.digitalocean.com/demo-remi/backend:v1.0.3
          imagePullPolicy: Always
          ports:
            - name: app-port
              containerPort: 9080
            - name: app-port-ws
              containerPort: 9081
          resources:
            requests:
              cpu: "0.125"
              memory: 50Mi
---
apiVersion: v1
kind: Service
metadata:
  name: demo-remi-backend
  labels:
    app.kubernetes.io/name: demo-remi-backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: demo-remi-backend
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9080
    - name: https
      port: 443
      protocol: TCP
      targetPort: 9080
    - name: websocket
      protocol: TCP
      port: 8000
      targetPort: 9081
