.infras/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-remi-frontend
  labels:
    app.kubernetes.io/name: demo-remi-frontend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: demo-remi-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: demo-remi-frontend
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: demo-remi-frontend
          image: registry.digitalocean.com/demo-remi/frontend:v1.0.0
          imagePullPolicy: Always
          ports:
            - name: app-port
              containerPort: 3000
          resources:
            requests:
              cpu: "0.125"
              memory: 50Mi
---
apiVersion: v1
kind: Service
metadata:
  name: demo-remi-frontend
  labels:
    app.kubernetes.io/name: demo-remi-frontend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: demo-remi-frontend
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
    - name: https
      port: 443
      protocol: TCP
      targetPort: 3000
