.infras/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo-remi-backend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: node-express-kubernetes-example-letsencrypt-dev
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: error
      port:
        name: svc-port
  tls:
  rules:
    - host: api.demo-remi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-remi-backend
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo-remi-frontend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: node-express-kubernetes-example-letsencrypt-dev
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: error
      port:
        name: svc-port
  tls:
  rules:
    - host: demo-remi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-remi-frontend
                port:
                  number: 80
